@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model


class Employee{
name
citizen_card_number
tax_number
address
email_address
contact
employeeRole
assignedAgency
}
class Agent{
name
citizen_card_number
tax_number
address
email_address
}

class SystemAdministrator{
id/email
password
}

class Land{

}


class Agency{
Id
designation
location
phone_number
email
}

class User{
name
email
password
}


class Property {
    type
    area
    location
    distance_from_the_city_centre
    requested_price
    photos
    }

class Announcement {
       property
         description
            type_of_comission
           comissionValue
      }

class Apartment{
    number_of_bedrooms
    number_of_bathrooms
    number_of_parking_spaces
    existence_of_central_heating
    existence_of_air_conditioning
}

class House{
    number_of_bedrooms
    number_of_bathrooms
    number_of_parking spaces
    existence_of_central heating
    existence_of_air_conditioning
    existence_of_a_basement
    existence_of_an_inhabitable_loft
    existence_of_sun_exposure
}


class  AgentRequestList{
request

}
class Request{
date
}


class Location{
street
city
state
zip code
}

class Owner{
id/email
password
}

class City{
cityName
}

class State{
stateAddress
}

class Message {
    property
    client's name
    phoneNumber
    date
    time slot
}

class Information {
file
}

class PropertyType{
name
}

class TypeOfBusiness{
name
}

class AppointmentRequest{
}

class Client{
}


Agent "1..*" -- "1..*" Request : receives a  >
Agent "1..*" -- "1" AgentRequestList: selects a request from >
Property "1"-- "1..*"Announcement: is needed for  >
Property "1"-- "1"Request: is needed for  >
Request "1..*"-- "1"AgentRequestList: is needed for  >
Request "1..*"-- "1..*"Announcement: converts to  >
Location "1"--"1" Property : is needed for >

Agent "1" -- "1..*" Announcement : publishes an >

Agent "1" -- "1..*" Announcement : publishes an >
Agent "1..*" -- "1..*" Agency : works for >
SystemAdministrator "1" -- "*" Employee : registers an >

SystemAdministrator "1" -- "*" Employee : defines the role for >
Owner "1" -- "1..*" Property : owns a >
Property "1" -- "1" House :  can be a >
Property "1" -- "1" Apartment :  can be a >
Property "1" -- "1" Land :  can be a >
UnregisterdUser "1" -- "1" User : registers >
Agent "1" -- "1" User: is a >
Client "1" -- "1" User: is a >
SystemAdministrator "1" -- "1" User: is a >
AgencyManager "1" -- "1" User: is a >
AgencyNetworkManager "1" -- "1" User: is a >




Owner "1" -- "1..*" Agent : selects an  >

Agency "1" -- "1" AgencyManager : managed by >
Agency "*" -- "1" AgencyNetworkManager : managed by >

Employee "1" -- "1" AgencyManager : can be >
Employee "1" -- "1" AgencyNetworkManager : can be >
Employee "1" -- "1" Agent : can be >

City "1..*" -- "1" State : belongs >
Location "*" -- "1" City

Agency "1" -- "1..*" Property : lists >

Agent "1" -- "1..*" Property : reservs a property >
Agent "1" -- "1" Owner :  answer the visit request >
Owner "1" -- "0..*" Message: send  >
Message "0..*" -- "1" Agent :  are received by the >
Agent "1" -- "1" Property : reserve a >
SystemAdministrator "1" -- "1" Information: imports >
Information "1" -- "*" Agency: contains >
Information "1" -- "*" Property: contains >
Information "1" -- "*" Owner: contains >
Property "1" --> "1" PropertyType : have >
Request "1" --> "1" Property: have >
Request "1" --> "1" TypeOfBusiness: have >
Announcement "1" --> "1" Request: have >
Request "1" --> "1" Agency : have >
Client "1" --> "1..*" AppointmentRequest: accepts or requests a
AppointmentRequest "*" --> "1" Agent: created by
AppointmentRequest "1" --> "1" Property: has a
Property "1" --> "1" Land: can be a
Property "1" --> "1" House: can be a
Property "1" --> "1" Apartment: can be a
Client "1" --> "1" User: is a
Agent "1" --> "1" User: is a

@enduml